// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sender Component loading state 1`] = `
<DocumentFragment>
  <div
  class="ant-sender"
>
  <textarea
    class="ant-input ant-input-outlined ant-sender-input"
    readonly=""
    style="resize: none; height: -54px; max-height: -54px;"
  />
  <div
    class="ant-sender-actions-list"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-text ant-btn-icon-only ant-sender-actions-btn"
          disabled=""
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clear"
              class="anticon anticon-clear"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clear"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
</DocumentFragment>
`;

exports[`Sender Component rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-sender ant-sender-rtl"
>
  <textarea
    class="ant-input ant-input-outlined ant-sender-input"
    style="resize: none; height: -54px; max-height: -54px;"
  />
  <div
    class="ant-sender-actions-list"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-rtl ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-text ant-btn-icon-only ant-btn-rtl ant-sender-actions-btn"
          disabled=""
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="clear"
              class="anticon anticon-clear"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="clear"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M899.1 869.6l-53-305.6H864c14.4 0 26-11.6 26-26V346c0-14.4-11.6-26-26-26H618V138c0-14.4-11.6-26-26-26H432c-14.4 0-26 11.6-26 26v182H160c-14.4 0-26 11.6-26 26v192c0 14.4 11.6 26 26 26h17.9l-53 305.6a25.95 25.95 0 0025.6 30.4h723c1.5 0 3-.1 4.4-.4a25.88 25.88 0 0021.2-30zM204 390h272V182h72v208h272v104H204V390zm468 440V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H416V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H202.8l45.1-260H776l45.1 260H672z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-text ant-btn-icon-only ant-btn-rtl ant-sender-actions-btn"
          disabled=""
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="send"
              class="anticon anticon-send"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="send"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M931.4 498.9L94.9 79.5c-3.4-1.7-7.3-2.1-11-1.2a15.99 15.99 0 00-11.7 19.3l86.2 352.2c1.3 5.3 5.2 9.6 10.4 11.3l147.7 50.7-147.6 50.7c-5.2 1.8-9.1 6-10.3 11.3L72.2 926.5c-.9 3.7-.5 7.6 1.2 10.9 3.9 7.9 13.5 11.1 21.5 7.2l836.5-417c3.1-1.5 5.6-4.1 7.2-7.1 3.9-8 .7-17.6-7.2-21.6zM170.8 826.3l50.3-205.6 295.2-101.3c2.3-.8 4.2-2.6 5-5 1.4-4.2-.8-8.7-5-10.2L221.1 403 171 198.2l628 314.9-628.2 313.2z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
